# openai-hackathon-2025

./: README.md  pyproject.toml
app/: agent.py  main.py  models.py  models.py.save  test.py
app/static/css/: style.css
app/templates/: form.html  place_details.html  places.html  places2.html  reservation_status.html  reserve.html  welcome.html
src/: config.py  main.py  models.py  stockfish.py
src/agents/: game_state.py  stockfish_agent.py  style_advisor_agent.py  summary_agent.py
src/tools/: formatting_tools.py  stockfish_tools.py
