[tool.poetry]
name = "openai-hackathon-2025"
version = "0.1.0"
description = ""
authors = ["kabanosk <56364007+Kabanosk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.76.0"
openai-agents = {extras = ["voice"], version = "^0.0.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
